ST-15760 player nothing to show z-index bug fixed

--- a/src/pages/InnerContainer/AppHead/Playlist/Playlist.scss
+++ b/src/pages/InnerContainer/AppHead/Playlist/Playlist.scss
@@ -372,6 +372,8 @@
   border: 1px solid rgba(black, 0.05);
   transition: $transition;
   cursor: pointer;
+  position: relative;
+  z-index: 1;
   &:hover {
     background-color: rgba(black, 0.05);
     transition: $transition;
